--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "eslint-plugin-react-hooks": "^5.2.0",
         "eslint-plugin-react-refresh": "^0.4.20",
         "react": "^19.1.0",
-        "react-dom": "^19.1.0"
+        "react-dom": "^19.1.0",
+        "vite-tsconfig-paths": "^5.1.4"
     },
     "devDependencies": {
         "@eslint-react/eslint-plugin": "^1.52.3",
