--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
         "baseUrl": "./src",
         "jsx": "react-jsx",
         "paths": {
-            "@/*": ["*"]
+            "@components/*": ["src/components/*"],
+            "@utils/*": ["src/utils/*"]
         }
     },
     "include": ["**/*.ts", "**/*.tsx"],
