--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,22 @@
 {
     "compilerOptions": {
-        "baseUrl": "./src",
+        "target": "ESNext",
+        "module": "ESNext",
         "jsx": "react-jsx",
+        "moduleResolution": "Node",
+        "baseUrl": "./src",
         "paths": {
-            "@components/*": ["src/components/*"],
-            "@utils/*": ["src/utils/*"]
-        }
+            "@components/*": ["components/*"],
+            "@utils/*": ["utils/*"]
+        },
+        "outDir": "dist",
+        "declaration": true,
+        "emitDeclarationOnly": true,
+        "strict": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true
     },
-    "include": ["**/*.ts", "**/*.tsx"],
-    "files": [],
-    "references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }]
+    "include": ["src/**/*"],
+    "exclude": ["node_modules", "dist"]
 }
