--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "lint": "eslint . --ext .ts,.tsx",
         "lint:fix": "eslint . --ext .ts,.tsx --fix",
         "format": "prettier --write .",
-        "preview": "vite preview"
+        "preview": "vite preview --host"
     },
     "dependencies": {
         "@types/react": "^19.1.8",
@@ -20,6 +20,7 @@
         "eslint-plugin-react-refresh": "^0.4.20",
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
+        "react-router-dom": "^6.30.1",
         "vite-tsconfig-paths": "^5.1.4"
     },
     "devDependencies": {
