--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "devDependencies": {
         "@eslint-react/eslint-plugin": "^1.52.3",
         "@eslint/js": "^9.31.0",
+        "@types/node": "^24.2.0",
         "eslint": "^9.31.0",
         "eslint-plugin-react": "^7.37.5",
         "globals": "^16.3.0",
